# ir-rag-sigir24-persona-rag

./: .gitignore  README.md  pyproject.toml
data/: data_nq_sampled.jsonl  data_triviaqa_sampled.jsonl  data_webq_sampled.jsonl
logs/: eval.py  nq_idx_0.json
logs/gpt-3.5-turbo-0125/nq/top3/: nq_idx_0.json  nq_idx_1.json  nq_idx_10.json  nq_idx_11.json  nq_idx_12.json  nq_idx_13.json  nq_idx_14.json  nq_idx_15.json  nq_idx_16.json  nq_idx_17.json  nq_idx_18.json  nq_idx_19.json  nq_idx_2.json  nq_idx_20.json  nq_idx_21.json  nq_idx_22.json  nq_idx_23.json  nq_idx_24.json  nq_idx_25.json  nq_idx_26.json  nq_idx_27.json  nq_idx_28.json  nq_idx_29.json  nq_idx_3.json  nq_idx_30.json  nq_idx_31.json  nq_idx_32.json  nq_idx_33.json  nq_idx_34.json  nq_idx_35.json  nq_idx_36.json  nq_idx_37.json  nq_idx_38.json  nq_idx_39.json  nq_idx_4.json  nq_idx_40.json  nq_idx_5.json  nq_idx_6.json  nq_idx_7.json  nq_idx_8.json  (+3 more)
logs/gpt-3.5-turbo-0125/nq/top5/: nq_idx_0.json  nq_idx_1.json  nq_idx_10.json  nq_idx_11.json  nq_idx_12.json  nq_idx_13.json  nq_idx_14.json  nq_idx_15.json  nq_idx_16.json  nq_idx_17.json  nq_idx_18.json  nq_idx_19.json  nq_idx_2.json  nq_idx_20.json  nq_idx_21.json  nq_idx_22.json  nq_idx_23.json  nq_idx_24.json  nq_idx_25.json  nq_idx_26.json  nq_idx_27.json  nq_idx_28.json  nq_idx_29.json  (+20 more)
persona_rag/agents/: agent.py  group.py
persona_rag/core/: generate.py
persona_rag/prompts/: prompt.py
persona_rag/workflows/: workflow.py
scripts/: main.py
scripts/evaluation/: evaluate.py
scripts/execution/: build.py  run.py
tests/: test_agents.py
(+252 files in other folders)
